2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* src/kernel/liscompat.c: correct LiS global synchronization

2007-03-24  Brian Bidulock  <bidulock@openss7.org>

	* src/include/sys/lfs/strconf.h:
	  - define D_LIS flag again
	  - provide register_strsync/unregister_strsync
	* src/include/sys/lis/strconf.h: define qlock constants
	* src/kernel/aixcompat.c: perform elsewhere synchronization correctly
	* src/kernel/hpuxcompat.c: perform elsewhere synchronization correctly
	* src/kernel/lfscompat.c: export (un)register_strsync
	* src/kernel/liscompat.c: remove GPL exports from LiS symbols
	* src/kernel/osfcompat.c: perform elsewhere synchronization correctly

	* src/include/sys/lfs/strconf.h: add sqinfo members
	* src/include/sys/lis/strconf.h: add missing qlock functions
	* src/kernel/liscompat.c: add missing qlock functions (still needs
	  implementation)


2007-03-15  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: pushed release date
	* doc/man/man9/str_install.9.man: some documentation updates
	* doc/man/man9/str_install_AIX.9.man: some documentation updates
	* doc/man/man9/str_install_HPUX.9.man: some documentation updates
	* doc/man/man9/strmod_add.9.man: some documentation updates

2007-03-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: corrections for autotest 2.59b+

2007-03-08  Brian Bidulock  <bidulock@openss7.org>

	* src/util/init/strcompat.sh: ubuntu looks for lsb info in init scripts

2007-03-07  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am (modutil_DATA): should not be distributed
	* tests/atlocal.in: tool substitutions changed

2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: correct version numbers
	* strcompat.spec.in: do not release source package

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man9/mi_allocb.9.man: completed documentation